--- a/.k8s/argo/cd/accounts/admin.yaml
+++ b/.k8s/argo/cd/accounts/admin.yaml
@@ -3,12 +3,20 @@ kind: ServiceAccount
 metadata:
   namespace: react-native
   name: admin
+  labels:
+    app: react-native
+    role: admin
+    platform.kubernetes: 'true'
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   namespace: react-native
   name: admin
+  labels:
+    app: react-native
+    role: admin
+    platform.kubernetes: 'true'
 rules:
   - apiGroups: ['*']
     resources: ['*']
@@ -19,6 +27,10 @@ kind: RoleBinding
 metadata:
   namespace: react-native
   name: admin
+  labels:
+    app: react-native
+    role: admin
+    platform.kubernetes: 'true'
 subjects:
   - kind: ServiceAccount
     name: admin
