--- a/.k8s/argo/cd/accounts/manager.yaml
+++ b/.k8s/argo/cd/accounts/manager.yaml
@@ -3,12 +3,20 @@ kind: ServiceAccount
 metadata:
   namespace: react-native
   name: manager
+  labels:
+    app: react-native
+    role: manager
+    platform.kubernetes: 'true'
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   namespace: react-native
   name: manager
+  labels:
+    app: react-native
+    role: manager
+    platform.kubernetes: 'true'
 rules:
   - apiGroups: ['', 'apps', 'batch', 'extensions', 'networking.k8s.io']
     resources: ['configmaps', 'secrets', 'services', 'pods', 'deployments']
@@ -28,6 +36,10 @@ kind: RoleBinding
 metadata:
   namespace: react-native
   name: manager
+  labels:
+    app: react-native
+    role: manager
+    platform.kubernetes: 'true'
 subjects:
   - kind: ServiceAccount
     name: manager
