--- a/.k8s/argo/cd/kustomization.yaml
+++ b/.k8s/argo/cd/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - accounts/admin.yaml
   - accounts/manager.yaml
 
-namePrefix: dev-
+# namePrefix: dev-
 namespace: react-native
 commonLabels:
   app: react-native
