--- a/.k8s/resources/accounts/manager.yaml
+++ b/.k8s/resources/accounts/manager.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  namespace: react-native
   name: manager
   labels:
     role: manager
@@ -9,6 +10,7 @@ metadata:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
+  namespace: react-native
   name: manager
   labels:
     role: manager
@@ -30,6 +32,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
+  namespace: react-native
   name: manager
   labels:
     role: manager
