--- a/.k8s/resources/volumes/source.yaml
+++ b/.k8s/resources/volumes/source.yaml
@@ -15,6 +15,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  namespace: react-native
   name: react-native
 spec:
   storageClassName: react-native
