--- a/.k8s/cluster/application.yaml
+++ b/.k8s/cluster/application.yaml
@@ -9,10 +9,10 @@ spec:
   project: react-native
   destination:
     server: https://kubernetes.default.svc
-    namespace: react-native
+    namespace: argo
   source:
     repoURL: https://github.com/lucasmathioni/react-native
-    path: .k8s
+    path: .k8s/cluster
     targetRevision: main
   syncPolicy:
     automated:
