--- a/.k8s/app/kustomization.yaml
+++ b/.k8s/app/kustomization.yaml
@@ -2,11 +2,13 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - volumes/react-native.yaml
-  - volumes/gradle.yaml
-  - accounts/admin.yaml
-  - accounts/manager.yaml
+- volumes/react-native.yaml
+- volumes/gradle.yaml
+- accounts/admin.yaml
+- accounts/manager.yaml
 
 # namePrefix: dev-
-commonLabels:
-  app: react-native
+labels:
+- includeSelectors: true
+  pairs:
+    app: react-native
