--- a/.k8s/cluster/kustomization.yaml
+++ b/.k8s/cluster/kustomization.yaml
@@ -2,10 +2,12 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - namespace.yaml
-  - volumes/react-native.yaml
-  - volumes/gradle.yaml
+- namespace.yaml
+- volumes/react-native.yaml
+- volumes/gradle.yaml
 
 # namePrefix: dev-
-commonLabels:
-  app: react-native
+labels:
+- includeSelectors: true
+  pairs:
+    app: react-native
