--- a/.k8s/project.yaml
+++ b/.k8s/project.yaml
@@ -7,16 +7,14 @@ spec:
   clusterResourceWhitelist:
     - group: ''
       kind: Namespace
-      jsonPointers:
-        - /metadata/annotations/argocd.argoproj.io~1tracking-id
     - group: ''
       kind: PersistentVolume
-      jsonPointers:
-        - /metadata/annotations/argocd.argoproj.io~1tracking-id
-  description: Projeto do react-native usando k8s, argo-workflow e arco-cd.
   destinations:
-    - name: '*'
-      namespace: '*'
+    - name: in-cluster
+      namespace: ''
+      server: https://kubernetes.default.svc
+    - name: in-cluster
+      namespace: react-native
       server: https://kubernetes.default.svc
   sourceRepos:
     - https://github.com/lucasmathioni/react-native
