--- a/.k8s/app/kustomization.yaml
+++ b/.k8s/app/kustomization.yaml
@@ -2,13 +2,13 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- volumes/react-native.yaml
-- volumes/gradle.yaml
-- accounts/admin.yaml
-- accounts/manager.yaml
+  - resources/volumes/react-native.yaml
+  - resources/volumes/gradle.yaml
+  - resources/accounts/admin.yaml
+  - resources/accounts/manager.yaml
 
 # namePrefix: dev-
 labels:
-- includeSelectors: true
-  pairs:
-    app: react-native
+  - includeSelectors: true
+    pairs:
+      app: react-native
