--- a/.k8s/argo/resources/applications/react-native-infra.yaml
+++ b/.k8s/argo/resources/applications/react-native-infra.yaml
@@ -1,18 +1,16 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  namespace: argo
-  name: react-native
+  name: react-native-infra
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
   project: react-native
   destination:
     server: https://kubernetes.default.svc
-    namespace: react-native
   source:
     repoURL: https://github.com/lucasmathioni/react-native
-    path: .k8s/app
+    path: .k8s/cluster
     targetRevision: main
     kustomize: {}
   syncPolicy:
