--- a/.k8s/cluster/kustomization.yaml
+++ b/.k8s/cluster/kustomization.yaml
@@ -2,12 +2,12 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- namespace.yaml
-- volumes/react-native.yaml
-- volumes/gradle.yaml
+  - resources/namespace.yaml
+  - resources/volumes/react-native.yaml
+  - resources/volumes/gradle.yaml
 
 # namePrefix: dev-
 labels:
-- includeSelectors: true
-  pairs:
-    app: react-native
+  - includeSelectors: true
+    pairs:
+      app: react-native
