--- a/.k8s/app/kustomization.yaml
+++ b/.k8s/app/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - resources/accounts/admin.yaml
   - resources/accounts/manager.yaml
 
-# namePrefix: dev-
+namespace: react-native
 labels:
   - includeSelectors: true
     pairs:
