--- a/.k8s/overlays/prod/kustomization.yaml
+++ b/.k8s/overlays/prod/kustomization.yaml
@@ -6,5 +6,7 @@ resources:
 
 namespace: prod
 namePrefix: prod-
-commonLabels:
-  environment: prod
+labels:
+  - includeSelectors: true
+    pairs:
+      environment: prod
