--- a/.k8s/argo/resources/applications/react-native.yaml
+++ b/.k8s/argo/resources/applications/react-native.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: react-native-cluster
+  name: react-native
 spec:
   project: react-native
   destination:
     server: https://kubernetes.default.svc
   source:
     repoURL: https://github.com/lucasmathioni/react-native
-    path: .k8s/cluster
+    path: .k8s/app
     targetRevision: main
   syncPolicy:
     automated:
