--- a/.k8s/app/kustomization.yaml
+++ b/.k8s/app/kustomization.yaml
@@ -2,12 +2,12 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+  - resources/namespace.yaml
   - resources/volumes/react-native.yaml
   - resources/volumes/gradle.yaml
   - resources/accounts/admin.yaml
   - resources/accounts/manager.yaml
 
-namespace: react-native
 labels:
   - includeSelectors: true
     pairs:
