--- a/.k8s/app/resources/accounts/admin.yaml
+++ b/.k8s/app/resources/accounts/admin.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  namespace: react-native
   name: admin
   labels:
     role: admin
@@ -8,6 +9,7 @@ metadata:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
+  namespace: react-native
   name: admin
   labels:
     role: admin
@@ -19,12 +21,14 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
+  namespace: react-native
   name: admin
   labels:
     role: admin
 subjects:
   - kind: ServiceAccount
     name: admin
+    namespace: react-native
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
