--- a/.k8s/app/resources/volumes/gradle.yaml
+++ b/.k8s/app/resources/volumes/gradle.yaml
@@ -1,6 +1,21 @@
 apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: gradle
+spec:
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: gradle
+  capacity:
+    storage: 5Gi
+  hostPath:
+    path: /opt/.gradle
+  accessModes:
+    - ReadWriteOnce
+---
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  namespace: react-native
   name: gradle
 spec:
   storageClassName: gradle
