--- a/.k8s/app/resources/volumes/react-native.yaml
+++ b/.k8s/app/resources/volumes/react-native.yaml
@@ -1,6 +1,21 @@
 apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: react-native
+spec:
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: react-native
+  capacity:
+    storage: 20Gi
+  hostPath:
+    path: /data/react-native
+  accessModes:
+    - ReadWriteOnce
+---
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  namespace: react-native
   name: react-native
 spec:
   storageClassName: react-native
