--- a/.k8s/argo/kustomization.yaml
+++ b/.k8s/argo/kustomization.yaml
@@ -2,9 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - resources/projects/react-native.yaml
-  - resources/applications/react-native-infra.yaml
-  - resources/applications/react-native-app.yaml
+  - resources/project.yaml
+  - resources/application.yaml
 
 namespace: argo
 labels:
