--- a/.k8s/argo/kustomization.yaml
+++ b/.k8s/argo/kustomization.yaml
@@ -2,8 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - resources/project.yaml
-  - resources/application.yaml
+  - ../app/project.yaml
+  - ../app/application.yaml
 
 namespace: argo
 labels:
