--- a/.k8s/argo/kustomization.yaml
+++ b/.k8s/argo/kustomization.yaml
@@ -2,8 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ../app/project.yaml
-  - ../app/application.yaml
+  - resources/project.yaml
+  - resources/applications/react-native-argo.yaml
+  - resources/applications/react-native.yaml
 
 namespace: argo
 labels:
