--- a/.k8s/argo/kustomization.yaml
+++ b/.k8s/argo/kustomization.yaml
@@ -6,3 +6,7 @@ resources:
   - resources/application.yaml
 
 namespace: argo
+labels:
+  - includeSelectors: true
+    pairs:
+      app: react-native
