--- a/.k8s/resources/application.yaml
+++ b/.k8s/resources/application.yaml
@@ -2,14 +2,14 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   namespace: argo
-  name: react-native-argo
+  name: react-native
 spec:
   project: react-native
   destination:
     server: https://kubernetes.default.svc
   source:
     repoURL: https://github.com/lucasmathioni/react-native
-    path: .k8s/argo
+    path: .k8s/app
     targetRevision: main
   syncPolicy:
     automated:
