--- a/.k8s/kustomization.yaml
+++ b/.k8s/kustomization.yaml
@@ -2,13 +2,14 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+  - resources/project.yaml
+  - resources/application.yaml
   - resources/namespace.yaml
   - resources/volumes/react-native.yaml
   - resources/volumes/gradle.yaml
   - resources/accounts/admin.yaml
   - resources/accounts/manager.yaml
 
-namespace: react-native
 labels:
   - includeSelectors: true
     pairs:
