--- a/.k8s/resources/project.yaml
+++ b/.k8s/resources/project.yaml
@@ -1,6 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
+  namespace: argo
   name: react-native
 spec:
   clusterResourceWhitelist:
