--- a/.k8s/kustomization.yaml
+++ b/.k8s/kustomization.yaml
@@ -2,13 +2,19 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - resources/project.yaml
-  - resources/application.yaml
-  - resources/namespace.yaml
-  - resources/volumes/react-native.yaml
-  - resources/volumes/gradle.yaml
   - resources/accounts/admin.yaml
   - resources/accounts/manager.yaml
+  - resources/application.yaml
+  - resources/namespace.yaml
+  - resources/project.yaml
+  - resources/volumes/react-native.yaml
+  - resources/volumes/gradle.yaml
+  - workflows/android/assemble-release.yaml
+  - workflows/android/clean.yaml
+  - workflows/android/init.yaml
+  - workflows/github/clone.yaml
+  - workflows/github/pull.yaml
+  - workflows/yarn/install.yaml
 
 labels:
   - includeSelectors: true
