--- a/.k8s/resources/project.yaml
+++ b/.k8s/resources/project.yaml
@@ -14,6 +14,9 @@ spec:
       namespace: ''
       server: https://kubernetes.default.svc
     - name: in-cluster
+      namespace: argo
+      server: https://kubernetes.default.svc
+    - name: in-cluster
       namespace: react-native
       server: https://kubernetes.default.svc
   sourceRepos:
