--- a/.k8s/cd/applications/react-native-infra.yaml
+++ b/.k8s/cd/applications/react-native-infra.yaml
@@ -1,18 +1,19 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  namespace: argo
-  name: react-native
+  name: react-native-infra
 spec:
   project: react-native
   destination:
     server: https://kubernetes.default.svc
   source:
     repoURL: https://github.com/lucasmathioni/react-native
-    path: .k8s
+    path: .k8s/infra
     targetRevision: main
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
       enabled: true
+  dependsOn:
+    - react-native-cd
