--- a/.k8s/infra/kustomization.yaml
+++ b/.k8s/infra/kustomization.yaml
@@ -2,13 +2,11 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - resources/accounts/admin.yaml
-  - resources/accounts/manager.yaml
-  - resources/application.yaml
-  - resources/namespace.yaml
-  - resources/project.yaml
-  - resources/volumes/react-native.yaml
-  - resources/volumes/gradle.yaml
+  - namespace.yaml
+  - volumes/react-native.yaml
+  - volumes/gradle.yaml
+  - accounts/admin.yaml
+  - accounts/manager.yaml
   - workflows/android/assemble-release.yaml
   - workflows/android/clean.yaml
   - workflows/android/init.yaml
