--- a/.k8s/app/workflows/react-native-init.yaml
+++ b/.k8s/app/workflows/react-native-init.yaml
@@ -1,6 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Workflow
 metadata:
+  name: react-native-android-init
   generateName: react-native-init-
   annotations:
     argocd.argoproj.io/hook: PostSync
