--- a/.k8s/app/workflows/react-native-android-release.yaml
+++ b/.k8s/app/workflows/react-native-android-release.yaml
@@ -1,6 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Workflow
 metadata:
+  name: react-native-android-release
   generateName: react-native-android-release-
   annotations:
     workflows.argoproj.io/title: 'React Native Android Release'
