--- a/.k8s/app/workflows/react-native-init.yaml
+++ b/.k8s/app/workflows/react-native-init.yaml
@@ -22,3 +22,11 @@ spec:
             templateRef:
               name: yarn-install
               template: main
+        - - name: android-init
+            templateRef:
+              name: android-init
+              template: main
+        - - name: android-clean
+            templateRef:
+              name: android-clean
+              template: main
