--- a/.k8s/app/workflows/react-native-android-release.yaml
+++ b/.k8s/app/workflows/react-native-android-release.yaml
@@ -20,3 +20,5 @@ spec:
             templateRef:
               name: android-assemble-release
               template: main
+  dependsOn:
+    - react-native-init
