--- a/.k8s/app/workflows/react-native-android-release.yaml
+++ b/.k8s/app/workflows/react-native-android-release.yaml
@@ -9,6 +9,10 @@ metadata:
 spec:
   serviceAccountName: manager
   entrypoint: main
+  dependencies:
+    - name: react-native-init
+      eventSourceName: argo-events
+      eventName: workflow-finished
   templates:
     - name: main
       steps:
@@ -20,5 +24,3 @@ spec:
             templateRef:
               name: android-assemble-release
               template: main
-  dependsOn:
-    - react-native-init
